# Lumine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
assets/: io.github.lumine.Lumine.desktop
cmake/: LumineWarnings.cmake
docs/: architecture.md  build.md  packaging.md  roadmap.md  testing.md
include/: .gitkeep
packaging/: PKGBUILD
scripts/: format.sh
src/: CMakeLists.txt
src/app/: main.cpp
src/core/: ImageCache.cpp  ImageCache.hpp  Logging.cpp  Logging.hpp  RecentFiles.cpp  RecentFiles.hpp  ScopedTimer.cpp  ScopedTimer.hpp  Version.hpp.in
src/image/: AsyncImageLoader.cpp  AsyncImageLoader.hpp  ImageInfo.cpp  ImageInfo.hpp  ImageList.cpp  ImageList.hpp  ImageLoader.cpp  ImageLoader.hpp  ThumbnailLoader.cpp  ThumbnailLoader.hpp
src/platform/: PlatformInfo.cpp  PlatformInfo.hpp
src/rendering/: ImageView.cpp  ImageView.hpp  ZoomMath.hpp
src/ui/: InfoPanel.cpp  InfoPanel.hpp  MainWindow.cpp  MainWindow.hpp  ThumbnailStrip.cpp  ThumbnailStrip.hpp
tests/: CMakeLists.txt  test_async_image_loader.cpp  test_image_cache.cpp  test_image_info.cpp  test_image_list.cpp  test_image_loader.cpp  test_platform_info.cpp  test_recent_files.cpp  test_scoped_timer.cpp  test_zoom_math.cpp
